--- a/public/AboutUs.html
+++ b/public/AboutUs.html
@@ -85,7 +85,7 @@
         .loader {
             position: absolute;
             top: 50%;
-            left: 47.5%;
+            left: 46%;
             transform: translate(-50%, -50%);
             border: 16px solid #f3f3f3;
             border-top: 16px solid white;
@@ -315,22 +315,24 @@
     </div>
 
     <div class="image-section border-dot">
-        <img src="Images/SunilThakur.webp" alt="Description of the image">
+        <img src="Images/ShivaniThakur.webp" alt="Description of the image">
         <div>
-            <h2>Sunil Thakur</h2>
+            <h2>Shivani Thakur</h2>
             <h3>Founder/CEO</h3>
             <p>This is some information about the image.</p>
         </div>
     </div>
 
     <div class="image-section border-dot">
-        <img src="Images/ShivaniThakur.webp" alt="Description of the image">
+        <img src="Images/SunilThakur.webp" alt="Description of the image">
         <div>
-            <h2>Shivani Thakur</h2>
-            <h3>Co-Founder</h3>
-            <p>This is some information about the image.</p>
+            <h2>Sunil Thakur</h2>
+            <h3>Co-founder & Director</h3>
+            <p>Born in Amritsar, Punjab, Sunil discovered his passion for dance during his high school years, quickly turning it into a lifelong pursuit. As he entered college, his hobby for dance developed into his passiona andd his  talent caught the eye of many, propelling him from local stages in Punjab to broader audiences across North India. Eventually, his journey led him to the heart of Bollywood in Mumbai, where he made his mark as a background dancer, working his way to prestigious awards like Filmfare and PTC Punjabi along the way. In 2018, Sunil took a bold step into filmmaking, directing his debut movie "Marriage Palace." With the taste of success lingering, he continued to push boundaries, creating captivating films like "Kade Haan Kade Na." In 2024 he launched another movie "Chal Bhaj Chaliye" showcasing his remarkable talent and determination.</p>
         </div>
     </div>
+
+    
     <footer id="footer">
         <p style="color: white; font-size: large;">© 2024 Patiala House Entertainment. All rights reserved.</p>
         <a href="PrivacyPolicy.html" style="font-size: large;color:white;">Privacy Policy</a>
