--- a/public/ContactUs.html
+++ b/public/ContactUs.html
@@ -284,13 +284,16 @@
         </div>
     </header>
     <main>
-        <div class="contact-heading">
+        <div class="contact-heading" style="padding: 10px 10px 0;">
             <h1>We want to hear your story.</h1>
         </div>
-        <div class="contact-info">
-            <p><i class="fas fa-envelope"></i><a href="mailto:patialahouseentertainments@gmail.com" style="color: white;">patialahouseentertainments@gmail.com</a></p>
-           <!-- <p><i class="fas fa-phone"></i><a href="tel:+9134567890" style="color: white;">+9134567890</a></p>-->
-            <p><i class="fas fa-map-marker-alt"></i><a href="geo:latitude,longitude?q=Your%20Address%20Goes%20Here" style="color: white;"> Address </a></p>            
+        <div class="contact-info" style="padding: 0 10px;">
+            <p><i class="fas fa-envelope" style="padding-right: 10px;"></i><a href="mailto:patialahouseentertainments@gmail.com?" style="color: white; text-decoration: none;">patialahouseentertainments@gmail.com</a></p>
+            <!-- <p><i class="fas fa-phone"></i><a href="tel:+9134567890" style="color: white;">+9134567890</a></p>-->
+            <p><i class="fas fa-map-marker-alt"  style="padding-right: 10px"></i><a href="https://maps.app.goo.gl/Wt6oEeajbshtiAAo9" style="color: white; text-decoration: none;">Office no #507
+                Tricity trade tower 
+                Patiala zirakpur highway </a></p>
+                        
         </div>
         <div class="contact-form">
             <input type="text" placeholder="First Name">
