--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
     .loader {
       position: absolute;
       top: 50%;
-      left: 47.5%;
+      left: 46%;
       transform: translate(-50%, -50%);
       border: 16px solid #f3f3f3;
       border-top: 16px solid white;
@@ -282,7 +282,7 @@
     <button class="arrow-button" id="arrowButton">&#8595;</button>
     <div class="text-container">
       <ul class="animated-text" style="list-style: none; padding: 0; font-size: 20px;">
-        <li style="font-size: 30px;">Our Services</li>
+        <li style="font-size: 30px; font-weight: bolder;">Our Services</li>
         <br>
         <li>Feature Films</li>
         <li>Videos</li>
